Fix alignment buttons

--- a/_sass/layout/publications.scss
+++ b/_sass/layout/publications.scss
@@ -84,6 +84,7 @@
   }
 
   .paper-buttons {
+    align-items: flex-end;
     flex-direction: row;
     justify-content: left;
 
